--- a/style.css
+++ b/style.css
@@ -8,15 +8,16 @@ h1{
 .orange-color{
     color: orange;
 }
-#my-img{
+.my-img{
     height: 500px;
 }
 section{
     display: flex;
+    padding-bottom: 150px;
 }
 .half-width{
     width: 50%;
-    padding-left: 2%;
+    padding: 0 2%;
 }
 .button-click{
     text-decoration: none;
@@ -31,4 +32,23 @@ section{
 .top-banner{
     background-image: url(/images/top-banner.png);
     background-repeat: no-repeat;
+}
+.sec-2{
+    padding-left: 100px;
+}
+.download-click{
+    text-decoration: none;
+        background-image: linear-gradient(orange tomato);
+        /*It is not working */
+        background-color: orange;
+        padding: 10px 40px;
+        border-radius: 5px;
+        color: white;
+        font: 400;
+}
+.dream-big{
+    background-image: url(/images/dream-bg.png);
+    background-repeat: no-repeat;
+    background-position: right;
+    
 }
