--- a/style.css
+++ b/style.css
@@ -57,10 +57,15 @@ h2{
 }
 #experiece{
     display: flex;
-    padding-bottom: 150px;
-    /* width: 80%; */
-    margin: 0 0px;
-    box-shadow: 10px rgb(214, 101, 8);
+    background-image: url(/images/exp-bg.png);
+    background-repeat: no-repeat;
+   
+}
+.experience-item {
+    width: 50%;
+    padding: 0 2%;
+    box-shadow: 10px 10px 40px gray;
+    margin-bottom: 150px;
 }
 #full-stack{
     border-left: 7px solid tomato;
@@ -77,7 +82,9 @@ h2{
 #foot{
     text-align: center;
     color: darkgray;
+    margin-top: 150px;
 }
 section{
     height: 500px;
+    margin-top: 50px;
 }
